<resources>
    <string name="app_name">Appeze</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner">Find a handy man through out Malawi, one account, all appeze</string>
    <string name="loginAs">Log in as</string>
    <string name="continueToLogin">Continue to login</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email address</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="appIcon">app icon</string>
    <string name="agent">Agent</string>
    <string name="getStarted">Get started</string>
    <string name="onBoardingBanner">Welcome to Appeze, you can use appeze as an agent or customer.</string>
    <string name="handyman">Handyman</string>
    <string name="resetPasswordBanner">Let\'s get you back on track by resetting your password. It takes 2 – 3 minutes</string>
    <string name="messages">Messages</string>
    <string name="more">More</string>
    <string name="projects">My projects</string>
    <string name="jobs">Jobs</string>
    <string name="search">Search</string>
    <string name="your_location">Your location</string>
    <string name="wishlist">Wishlist</string>
    <string name="notifications">Notifications</string>
    <string name="viewMyProfile">View my profile</string>
    <string name="userName">Kells Kamuzu</string>
    <string name="myBalance">My Balance</string>
    <string name="mk50_000">MK50,000.00</string>
    <string name="view_transfer_history">View transfer history</string>
    <string name="make_the_transfer_to_your_bank">Make the transfer to your bank</string>
    <string name="payments">Payments</string>
    <string name="icon">icon</string>
    <string name="aa">Airtel money: Phone number ends with *92</string>
    <string name="tnm_mpamba_phone_ends_with_11">TNM Mpamba: Phone ends with *11</string>
    <string name="payout">Payout</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="privacy_and_policy">Privacy and Policy</string>
    <string name="terms_and_condition">Terms and condition</string>
    <string name="contacts">Contacts</string>
    <string name="in_progress">In Progress</string>
    <string name="in_past">In Past</string>
    <string name="yourLocation">Your location</string>
    <string name="showMore">Show more</string>
    <string name="categories">Categories</string>
    <string name="babysitter">Babysitter</string>
    <string name="cleaning">Cleaning</string>
    <string name="repair">Repair</string>
    <string name="moving">Moving</string>
    <string name="setting_up">Setting up</string>
    <string name="gardening">Gardening</string>
    <string name="other">Other</string>
    <string name="need_a_handyman_to_fix_my_toilet">Need a handyman to fix my toilet</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="mk12_500_00">MK12,500</string>
    <string name="ndirande_blantyre">Ndirande, Blantyre</string>
    <string name="_3_days_left">3 days left</string>

    <string-array name="logInAsList">
        <item>Appeze agent</item>
        <item>Appeze user</item>
    </string-array>

</resources>