<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="mw.appeze.auth.fragments.LoginFragment" />
    </data>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_white"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/icon"
                android:layout_gravity="center"
                android:contentDescription="@string/appIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banner"
                android:textAlignment="center"
                android:layout_margin="5dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/loginAs"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/loginAsSpinner"
                android:stateListAnimator="@drawable/spinner"
                android:background="@drawable/stroked_rectangle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:targetApi="lollipop" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/loginEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailAddress"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:id="@+id/loginEmail"
                    android:textSize="14sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                android:id="@+id/loginPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:id="@+id/loginPassword"
                    android:textSize="14sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/continueToLogin"
                app:cornerRadius="3dp"
                android:id="@+id/continueToLogin"
                android:onClick="@{fragment.processLogin}"
                android:textAllCaps="false"
                android:padding="10dp"
                app:icon="@drawable/ic_lock"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                >
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="#969696"
                    android:id="@+id/toRegister"
                    android:textAlignment="textStart"
                    android:gravity="start"
                    android:onClick="@{fragment.toRegister}"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/register"/>
                <Button
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotPassword"
                    android:id="@+id/toForgotPassword"
                    android:onClick="@{fragment.toForgotPassword}"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="@color/blue_500"
                    android:gravity="end" />
            </LinearLayout>

        </LinearLayout>

</layout>