<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue_500"
        tools:context=".ui.OnBoardingActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getStarted"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onBoardingBanner"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="10dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/handyman"
            android:padding="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/handyman" />

    </LinearLayout>
</layout>